--- a/src/main/resources/templates/fragments/corpHeader.html
+++ b/src/main/resources/templates/fragments/corpHeader.html
@@ -93,7 +93,7 @@
 	        </td>
 	        <td>
 	          <div class="corp-submenu-item">
-	            <span class="corp-submenu-link">기업 정보 수정</span><br>
+	            <a th:href="@{/corp/corp_info_edit}"><span class="corp-submenu-link">기업 정보 수정</span></a><br>
 	            <span class="corp-submenu-link">이미지 등록</span><br>
 	            <span class="corp-submenu-link">비밀번호 변경</span>
 	          </div>
