--- a/src/main/resources/templates/corp/main_page.html
+++ b/src/main/resources/templates/corp/main_page.html
@@ -17,6 +17,9 @@ function hideSubmenu() {
     document.querySelector('.corp-overlay').classList.remove('active');
 }
 
+const user = `[[${user.email}]]`; //model가져오기 
+console.log(user);
+
 </script>
 </head>
 <body>
