--- a/src/main/resources/templates/login/joinCorpForm.html
+++ b/src/main/resources/templates/login/joinCorpForm.html
@@ -773,8 +773,8 @@ function chkPasswordOneNTwo(){
             </div>
 -->           
             <div class="form-group">
-                <label class="form-label">개업일</label>
-                <input type="text" id="corpCreatedAt" name="corpCreatedAt" class="form-input" placeholder="개업일 입력(YYYYMMDD)">
+                <label class="form-label">설립일</label>
+                <input type="text" id="corpCreatedAt" name="corpCreatedAt" class="form-input" placeholder="설립일 입력(YYYYMMDD)">
             </div>
             
             <div class="form-group">
